# FreeFuse

./: .gitignore  README.md  __init__.py  controlnet_freefuse_flux_bg_except.py  export_api.py  ipadapter_freefuse_flux_bg_except.py  main_freefuse_flux.py  main_freefuse_flux2_klein.py  main_freefuse_flux_bg_except.py  main_freefuse_ltx2.py  main_freefuse_sdxl.py  main_freefuse_z_image.py  main_ltx2.py  pyproject.toml  redux_freefuse_flux_bg_except.py  requirements.txt  task.md
.github/workflows/: sync-comfyui.yml
analysis/: ltx2_block_comparison.py  sdxl_block_comparison.py  zit_block_comparison.py
freefuse_comfyui/: COMPLETE_QWEN_WORKFLOW.md  CONTRIBUTION_REPORT.md  LTX_VIDEO.md  LTX_VIDEO_ARCHITECTURE.md  LTX_VIDEO_README.md  LTX_VIDEO_WORKFLOW.md  MULTI_LORA_VRAM_OPTIMIZATION.md  QWEN_IMAGE.md  QWEN_IMAGE_ARCHITECTURE_DIAGRAM.md  QWEN_IMAGE_OPTIMAL_SETTINGS.md  QWEN_IMAGE_SIMILARITY_EXTRACTION.md  README.md  TENSOR_JSON_ERROR_FIX.md  Z_IMAGE.md  __init__.py  clean_workflows.py  ltx-model.txt  pyproject.toml  qwen-model.txt  testfile.txt
freefuse_comfyui/dev_workflows/: FreeFuse-ltx-manual-masks.json  FreeFuse-qwen-image-manual-mask.json  FreeFuse-qwen-image-sam-mask.json  FreeFuse-zimage-manual-mask.json  FreeFuse-zimage-sam-mask.json  (+1 more)
freefuse_core/: __init__.py  attention.py  attention_bias.py  attention_bias_patch.py  attention_replace.py  bypass_lora_loader.py  freefuse_bypass.py  lora_mask_hook.py  mask_utils.py  token_utils.py
loras/: Jinx_Arcane_zit.safetensors  Vi_Arcane_zit.safetensors  rapstangled_ltx2.safetensors  shalnark_klein_9b.safetensors  skeletor_zit.safetensors  tifa_ltx2.safetensors
nodes/: __init__.py  attention_bias.py  concept_map.py  lora_loader.py  mask_applicator.py  preview.py  sampler.py
tests/: test_attn_bias.py  test_components.py  test_flux_components.py  test_flux_e2e.py  test_flux_integration.py  test_freefuse_compare.py  test_mask_layers.py  test_mask_resize.py  test_parameters.py  test_sdxl_e2e.py  test_token_utils.py  test_voting.py
workflows/: controlnet_zimage_freefuse_with_editor.json  flux2_klein_4b_freefuse_complete.json  flux2_klein_4b_freefuse_with_editor.json  flux2_klein_9b_freefuse_complete.json  flux2_klein_9b_freefuse_with_editor.json  flux_freefuse_complete.bak.json  flux_freefuse_complete.json  flux_freefuse_simple.json  gguf_zimage_freefuse_with_editor.json  image_flux2_klein_text_to_image.json  image_flux2_text_to_image_9b.json  sdxl_freefuse_complete.json  zimage_freefuse_complete.json
(+70 files in other folders)
