[project]
name = "freefuse"
description = "FreeFuse: Easily multi LoRA multi subject Generation! 🤗"
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI-FreeFuse requirements", "# Core dependencies should be installed with FreeFuse main package", "# ComfyUI is assumed to be already installed", "# torch>=2.0.0", "# diffusers>=0.21.0", "# transformers>=4.25.0"]

[project.urls]
Repository = "https://github.com/yaoliliu/FreeFuse"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/yaoliliu/FreeFuse/"
"Bug Tracker" = "https://github.com/yaoliliu/FreeFuse/issues"

[tool.comfy]
PublisherId = "yaoliliu"  
DisplayName = "FreeFuse"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

