[project]
name = "freefuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=16.1.0",
    "bitsandbytes>=0.49.1",
    "clip>=0.2.0",
    "diffusers>=0.36.0",
    "gguf>=0.17.1",
    "hf-transfer>=0.1.9",
    # "hpsv3",
    "matplotlib>=3.10.8",
    "nvitop>=1.6.1",
    "peft>=0.18.1",
    "protobuf>=6.33.2",
    # "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchao>=0.15.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    # "ultralytics>=8.3.251",
]

[tool.uv.workspace]
members = [
    "ConceptAttention",
    "eval",
    "eval/other_methods/LoRAShop",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git", rev = "main" }
